Restore Windows x86 builds and harden updates